--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<body>
 
 		<h1 id="midnightHeader">Mr.Midnight</h1>
-		<img id="midnightIcon" src="assets/img/midnight.jpeg" alt="Mr.Midnight Profile Picture">
+
+		<div id="iconPlaceholder">
+			<img id="midnightIcon" src="assets/img/midnight.jpeg" alt="Mr.Midnight Profile Picture">
+		</div>
 
 		<br><br><br>
 
